--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./style/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <style>
+        h1 {
+    color: white;
+    background-color: red;
+    font-size: 32px;
+    text-align: center;
+    font-weight: 700;
+    }
+
+    .c1,
+    .c3 {color: black;
+        background-color: #ff000080;
+        font-family: verdana;
+    }
+
+    .c3 {font-size: 24px;
+    }
+
+    #c2 {color: blue;
+    font-size: 36px;
+    background-color: white;
+    }
+
+    #c4 {color: black;
+    background-color: greenyellow;
+    font-size: 24px;
+    font-weight: 700;
+    }
+
+    </style>
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <a href=./recipes/lasagna.html>Lasagna</a>
+    <p>I just want css to work aghghghg</p>
+    <p>It works with internal CSS but not external lmao</p>
+    <p class="c1">Number 1</p>
+    <p id="c2">Number 2</p>
+    <p class="c3">Number 3</p>
+    <p id="c4">Number 4</p> 
+    <button>h1 too</button>
 </body>
 </html>
