--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    h1 {
+color: white;
+background-color: red;
+font-size: 32px;
+text-align: center;
+font-weight: 700;
+}
+
+p {
+color: white;
+background-color: green;
+font-size: 18px;
+}
+
+ol {background-color: brown;
+}
+</style>
+</head>
 <body>
     <h1>Lasagna</h1>
-    <img src="./images/lasagna.jpeg">
+    
+    <img src="../images/148-1483618_lasagna-lasagne-mint-sticker-freetoedit-fastfood-european-lasagna.png">
     <h2>Description</h2>
     <p>Vegetable lasagna</p>
     <p>As tasty as the meat one!</p>
